# btyperdb_website-rs

./: Cargo.toml  Makefile  build.sh  config.json.dev  info.txt
app/: Cargo.toml  index.html
app/src/: appstate.rs  component_map.rs  core_model.rs  download.rs  main.rs  model_about.rs  model_help.rs  model_landing.rs  model_search.rs  model_stats.rs  model_table.rs  model_tree.rs  resize.rs  testdata.json  testmeta.json  testsearch.json
app/src/treeview/: mod.rs  treelayout.rs  treeview_camera.rs  treeview_main.rs  treeview_model.rs  umap.frag  umap.vert
app/style/: style.scss
app/svgs/: world-palestine-lowres.js
server/: Cargo.toml  config.json  config.json.beagle
server/src/: escaping.rs  main.rs  stats.rs  straintable.rs  tree.rs  zip.rs
src/: lib.rs
