[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
my-web-app = {path=".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
csv = "1.2.2"
lazy_static = "1.5.0"
rusqlite = { version = "0.37.0", features = ["column_metadata"] }

